[package]
name = "dreamboard"
version = "0.1.0"
authors = ["Guillaume Pinot <texitoi@texitoi.eu>", "Blue Spies <unfixedsoup@proton.me>"]
edition = "2018"

[dependencies]
adafruit-kb2040 = "0.8.0"
cortex-m = "0.7"
cortex-m-rt = { version = "0.7.1", features = ["device"] }
panic-halt = "0.2.0"
keyberon = { git = "https://github.com/TeXitoi/keyberon" }
cortex-m-rtic = "1.0.0"
embedded-hal = "0.2"
usb-device = "0.2.0"
nb = "1.0.0"

[profile.release]
lto = true
incremental = false
opt-level = "z"
debug = true
