[package]
name = "dreamboard"
version = "0.0.1"
authors = ["Blue Spies <unfixedsoup@proton.me>"]
edition = "2018"

[dependencies]
adafruit-kb2040 = "0.8.0"
panic-probe = "0.3.0"

[profile.dev]
lto = true
incremental = true
opt-level = "z"
debug = true

[profile.release]
lto = true
incremental = false
opt-level = "z"
debug = false
